--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div class="imgBox">
       <div class="bark">
         <!-- <img
-          src="img/img.png"
+          src="img.png"
           style="width:100%;height:100%;transform: scaleX(1)"
           /> -->
         </div>
         <img 
-        src="img/img.png"
+        src="img.png"
         style="width:100%;height:100%"
         />
       </div>
@@ -45,7 +45,7 @@
         <!-- <div class="hightlight">SELAMAT HARI RAYA AIDIL FITRI MAAF ZAHIR DAN BATIN.</div> -->
         <div class="v">
           <video autoplay="1" loop="1" muted >
-          <source src="img/animasi.mp4" type="video/mp4" />
+          <source src="animasi.mp4" type="video/mp4" />
       </video>
       
     </div>
